# family-chat

./: .gitignore  README.md  conversations.db  embedchain.json  main.py  markdown2.py  packages.txt.old  prompts.py  pyproject.toml  requirements.txt
.streamlit/: secrets.example
backup/: 1_📄_Chat_with_PDF_and_Web.py.bak7  3_🎨_Generate_Images_backup.py  main.py.bak2  main.py.bak3  main.py.bak4  main.py.bak6  main_backup.py
db/: chroma.sqlite3
pages/: 1_📄_Chat_with_PDF.py  1_📄_Chat_with_PDF_and_Web.py  2_🔍_Analyze_Images.py  3_🎨_Generate_Images.py  4_BETA_Chat_with_Internet.py  Chat_with_PDF.py  Generate_Images.py  📄_Chat_with_PDF.py  🔍_Analyze_Images.py
